--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -62,7 +62,7 @@
   "dependencies": {
     "@applitools/eyes-api": "1.0.12",
     "@applitools/eyes-sdk-core": "12.22.6",
-    "@applitools/utils": "1.2.2",
+    "@applitools/spec-driver-playwright": "1.0.1",
     "@applitools/visual-grid-client": "15.8.20"
   },
   "devDependencies": {
