add spec-playwright to publish wf

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -299,6 +299,26 @@ jobs:
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).spec-selenium.package}}
           version: ${{fromJSON(needs.setup.outputs.packages).spec-selenium.releaseVersion}}
+  spec-playwright:
+    needs: [setup, utils, test-utils]
+    if: ${{fromJSON(needs.setup.outputs.packages).spec-playwright && !failure() && !cancelled()}}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check-out repository
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: Run tests
+        uses: ./.github/actions/tests
+        with:
+          package: ${{fromJSON(needs.setup.outputs.packages).spec-playwright.package}}
+      - name: Publish to NPM
+        uses: ./.github/actions/publish
+        with:
+          package: ${{fromJSON(needs.setup.outputs.packages).spec-playwright.package}}
+          version: ${{fromJSON(needs.setup.outputs.packages).spec-playwright.releaseVersion}}
 
   universal:
     needs: [setup, types, utils, logger, core, vgc]
