--- a/packages/spec-driver-selenium/package.json
+++ b/packages/spec-driver-selenium/package.json
@@ -57,7 +57,7 @@
     "@applitools/api-extractor": "1.1.3",
     "@applitools/scripts": "1.0.1",
     "@applitools/sdk-release-kit": "0.13.3",
-    "@applitools/test-utils": "1.0.8",
+    "@applitools/test-utils": "1.0.9",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
     "@types/selenium-webdriver": "^4.0.15",
@@ -70,7 +70,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.7",
     "mocha": "^9.1.2",
-    "selenium-webdriver": "3",
+    "selenium-webdriver": "^4.0.0-rc-2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
