--- a/packages/spec-driver-playwright/package.json
+++ b/packages/spec-driver-playwright/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/spec-driver-playwright",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "keywords": [
     "playwright",
     "chrome devtools protocol",
@@ -66,6 +66,7 @@
     "husky": "^4.3.7",
     "mocha": "^9.1.2",
     "playwright": "^1.15.2",
+    "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
