--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -38,13 +38,12 @@
     "types"
   ],
   "scripts": {
-    "lint": "eslint '**/*.ts' '**/*.js'",
+    "lint": "eslint '**/*.ts'",
     "build": "yarn build:dist && yarn build:types",
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules playwright",
     "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright'",
-    "test": "yarn test:it && yarn test:coverage",
-    "test:it": "mocha --no-timeouts -r ts-node/register ./test/it/*.spec.ts",
+    "test": "yarn test:coverage",
     "test:coverage": "yarn build:dist && yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright'",
     "deps": "bongo deps",
@@ -60,18 +59,18 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.0.12",
-    "@applitools/eyes-sdk-core": "12.22.6",
-    "@applitools/spec-driver-playwright": "1.0.1",
-    "@applitools/visual-grid-client": "15.8.20"
+    "@applitools/eyes-api": "1.1.4",
+    "@applitools/eyes-sdk-core": "12.23.15",
+    "@applitools/spec-driver-playwright": "1.1.0",
+    "@applitools/visual-grid-client": "15.8.34"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.1.3",
     "@applitools/scripts": "1.0.1",
-    "@applitools/sdk-coverage-tests": "2.3.14",
-    "@applitools/sdk-release-kit": "0.13.0",
-    "@applitools/sdk-shared": "0.9.5",
-    "@applitools/test-utils": "1.0.7",
+    "@applitools/sdk-coverage-tests": "2.3.15",
+    "@applitools/sdk-release-kit": "0.13.3",
+    "@applitools/sdk-shared": "0.9.6",
+    "@applitools/test-utils": "1.0.9",
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
