--- a/packages/spec-driver-selenium/package.json
+++ b/packages/spec-driver-selenium/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.7",
     "mocha": "^9.1.2",
+    "prettier": "^2.4.1",
     "selenium-webdriver": "^4.0.0-rc-2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
