--- a/packages/eyes-browser-extension/package.json
+++ b/packages/eyes-browser-extension/package.json
@@ -25,6 +25,11 @@
     "version": "yarn build && bongo version",
     "postversion": "bongo postversion --skip-release-notification"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/eyes-browser-extension"
+  },
   "dependencies": {
     "@applitools/eyes-sdk-core": "12.23.12",
     "@applitools/utils": "1.2.3",
