add directory to repository field in package.json (#697)

--- a/packages/eyes-playwright-universal/package.json
+++ b/packages/eyes-playwright-universal/package.json
@@ -8,7 +8,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:applitools/eyes.sdk.javascript1.git"
+    "url": "git@github.com:applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/eyes-playwright-universal"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": {
