--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -19,7 +19,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:applitools/eyes.sdk.javascript1.git"
+    "url": "git@github.com:applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/eyes-puppeteer"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": {
