--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -15,7 +15,8 @@
   "author": "Amit Zur <amit.zur@applitools.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/visual-grid-client"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
