--- a/packages/driver/package.json
+++ b/packages/driver/package.json
@@ -16,7 +16,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/driver"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": {
