--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -35,7 +35,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/eyes-cypress"
   },
   "dependencies": {
     "@applitools/dom-snapshot": "4.5.9",
