--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -52,7 +52,8 @@
   "license": "SEE LICENSE IN LICENSE",
   "repository": {
     "type": "git",
-    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/eyes-storybook"
   },
   "dependencies": {
     "@applitools/driver": "1.2.6",
