--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -17,7 +17,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:applitools/eyes.sdk.javascript1.git"
+    "url": "git@github.com:applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/eyes-universal"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": {
