--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -17,7 +17,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git",
+    "directory": "packages/screenshoter"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": {
