--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -37,6 +37,7 @@
     "@applitools/http-commons": "2.4.5",
     "@applitools/isomorphic-fetch": "3.0.0",
     "@applitools/jsdom": "1.0.3",
+    "@applitools/logger": "1.0.4",
     "abort-controller": "3.0.0",
     "chalk": "3.0.0",
     "he": "1.2.0",
