send user agent when fetching google fonts (#695)
* send user agent when fetching google fonts

* small fixes

* adjust tests

* fix Amit's notes and add an e2e test

* update utils changelog

Co-authored-by: Sophie De Paula <sophie24587@gamil.com>

--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -55,6 +55,7 @@
     "@applitools/sdk-release-kit": "0.13.3",
     "@applitools/test-server": "1.0.5",
     "@applitools/test-utils": "1.0.9",
+    "@applitools/utils": "^1.2.3",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "chai-uuid": "^1.0.6",
