--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -60,6 +60,7 @@
     "@applitools/eyes-puppeteer": "1.8.4",
     "@applitools/eyes-sdk-core": "12.23.18",
     "@applitools/functional-commons": "1.6.0",
+    "@applitools/logger": "^1.0.5",
     "@applitools/monitoring-commons": "1.0.19",
     "@applitools/test-server": "1.0.5",
     "@applitools/visual-grid-client": "15.8.37",
