--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -32,7 +32,7 @@
     "index.d.ts"
   ],
   "dependencies": {
-    "@applitools/eyes-sdk-core": "12.23.19",
+    "@applitools/eyes-sdk-core": "12.23.20",
     "@applitools/functional-commons": "1.6.0",
     "@applitools/http-commons": "2.4.5",
     "@applitools/isomorphic-fetch": "3.0.0",
@@ -41,6 +41,7 @@
     "abort-controller": "3.0.0",
     "chalk": "3.0.0",
     "he": "1.2.0",
+    "lodash.mapkeys": "4.6.0",
     "lodash.mapvalues": "4.6.0",
     "mime-types": "2.1.27",
     "mkdirp": "0.5.5",
