add a retry mechanism for cases we get 0 stories (#696)
* add a retry machanisem for cases we get 0 stories

* fixed notes

* fix eslint

* fix eslint

* fix eslint

* eslint

* update eslintignore

* fix Amit's notes

Co-authored-by: Sophie De Paula <sophie24587@gamil.com>

--- a/packages/eyes-storybook/.eslintignore
+++ b/packages/eyes-storybook/.eslintignore
@@ -8,5 +8,6 @@ test/fixtures/jsLayoutStorybookLocal
 test/fixtures/waitBeforeCapture
 test/fixtures/customFont
 test/fixtures/fakeIE
+test/fixtures/zeroStoriesRetry
 dist
 logs
