--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -91,7 +91,7 @@
     "husky": "^4.3.8",
     "mocha": "^9.1.2",
     "prettier": "^2.1.2",
-    "selenium-webdriver": "^4.0.0-rc-2",
+    "selenium-webdriver": "^4.0.0",
     "spec-xunit-file": "0.0.1-3",
     "typescript": "^4.1.3"
   },
