--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -88,7 +88,11 @@
   "dependencies": {
     "@applitools/dom-capture": "11.0.1",
     "@applitools/dom-snapshot": "4.4.11",
+    "@applitools/driver": "1.2.7",
     "@applitools/eyes-images": "4.19.1",
+    "@applitools/eyes-sdk-core": "12.23.24",
+    "@applitools/logger": "1.0.5",
+    "@applitools/utils": "1.2.4",
     "@applitools/visual-grid-client": "15.5.20",
     "buffer": "^5.2.1",
     "classnames": "^2.2.5",
