side eyes publish doc (#707)

--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -7,9 +7,7 @@
     "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx --no-eslintrc --config .eslintrc.js",
     "start": "webpack-dev-server --hot",
     "build": "yarn build:page && webpack",
-    "build:prod": "rm -rf build && env NODE_ENV=production yarn build",
     "build:page": "webpack --config webpack.config.page.babel.js",
-    "prepublish:setup": "yarn build:prod",
     "test": "jest",
     "test:code-export:csharp": "node tests/e2e/code-export/run-tests.js csharp-nunit",
     "test:code-export:csharp:vg": "node tests/e2e/code-export/run-tests.js csharp-nunit true",
@@ -23,6 +21,7 @@
     "test:code-export:ruby:vg": "node tests/e2e/code-export/run-tests.js ruby-rspec true",
     "postinstall": "patch-package",
     "upgrade:sdks": "node scripts/update-sdks.js",
+    "release:gh": "node scripts/gh-release.js",
     "release": "(./scripts/deploy.js && node scripts/gh-release.js && yarn release:amo && yarn release:cws);exit 0;",
     "release:amo": "cd build && web-ext-submit",
     "release:cws": "cd build && webstore upload --auto-publish",
