--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -54,9 +54,11 @@
     "png-async": "0.9.4"
   },
   "devDependencies": {
-    "@applitools/driver": "1.2.7",
+    "@applitools/driver": "1.3.1",
     "@applitools/sdk-release-kit": "0.13.4",
-    "@applitools/spec-driver-webdriverio": "^1.1.0",
+    "@applitools/spec-driver-webdriverio": "1.2.0",
+    "@applitools/test-utils": "1.0.9",
+    "chromedriver": "^95.0.0",
     "eslint": "^7.9.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
