[auto commit] @applitools/driver: upgrade deps

--- a/packages/driver/package.json
+++ b/packages/driver/package.json
@@ -38,7 +38,9 @@
   },
   "typesVersions": {
     "*": {
-      "fake": ["./types/fake/index.d.ts"]
+      "fake": [
+        "./types/fake/index.d.ts"
+      ]
     }
   },
   "files": [
