--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -603,6 +603,37 @@ jobs:
           path: |
             packages/${{fromJSON(needs.setup.outputs.packages).testcafe.package}}/coverage-tests-metadata.json
             packages/${{fromJSON(needs.setup.outputs.packages).testcafe.package}}/coverage-test-report.xml
+  browser-extension:
+    needs: [setup, utils, core, vgc, spec-playwright, test-utils]
+    if: ${{fromJSON(needs.setup.outputs.packages).browser-extension && !failure() && !cancelled()}}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check-out repository
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: lts/*
+      # - name: Run tests
+      #   uses: ./.github/actions/tests
+      #   with:
+      #     package: ${{fromJSON(needs.setup.outputs.packages).browser-extension.package}}
+      #   env: ${{fromJSON(needs.setup.outputs.packages).browser-extension.env}}
+      - name: Update version
+        id: version
+        uses: ./.github/actions/publish
+        with:
+          package: ${{fromJSON(needs.setup.outputs.packages).browser-extension.package}}
+          version: ${{fromJSON(needs.setup.outputs.packages).browser-extension.releaseVersion}}
+          skip-npm: true
+      - name: Publish to GitHub
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{steps.version.outputs.tag}}
+          files: |
+            packages/${{fromJSON(needs.setup.outputs.packages).browser-extension.package}}/eyes-browser-extension.zip
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   storybook:
     needs: [setup, utils, puppeteer, core, vgc, test-utils]
     if: ${{fromJSON(needs.setup.outputs.packages).storybook && !failure() && !cancelled()}}
