--- a/packages/eyes-browser-extension/package.json
+++ b/packages/eyes-browser-extension/package.json
@@ -40,6 +40,7 @@
     "@applitools/scripts": "^1.0.1",
     "@applitools/sdk-coverage-tests": "^2.3.15",
     "@applitools/sdk-release-kit": "^0.13.3",
+    "@applitools/spec-driver-playwright": "^1.2.0",
     "@applitools/test-utils": "^1.0.7",
     "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
