--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -59,16 +59,16 @@
   },
   "dependencies": {
     "@applitools/eyes-api": "1.1.6",
-    "@applitools/eyes-sdk-core": "12.24.0",
+    "@applitools/eyes-sdk-core": "12.24.1",
     "@applitools/spec-driver-playwright": "1.2.0",
-    "@applitools/visual-grid-client": "15.8.44"
+    "@applitools/visual-grid-client": "15.8.45"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.2",
     "@applitools/scripts": "1.0.1",
     "@applitools/sdk-coverage-tests": "2.3.16",
     "@applitools/sdk-release-kit": "0.13.4",
-    "@applitools/sdk-shared": "0.9.8",
+    "@applitools/sdk-shared": "0.9.9",
     "@applitools/test-utils": "1.0.9",
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -80,7 +80,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.7",
     "mocha": "^8.0.1",
-    "playwright": "1.15",
+    "playwright": "^1.16.3",
     "prettier": "^2.1.2",
     "spec-xunit-file": "0.0.1-3",
     "ts-node": "^10.2.1",
