--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -79,6 +79,7 @@
     "@applitools/sdk-release-kit": "0.13.4",
     "@applitools/sdk-shared": "0.9.9",
     "@applitools/test-utils": "1.0.9",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "chromedriver": "^95.0.0",
