--- a/packages/eyes-protractor/tsconfig.json
+++ b/packages/eyes-protractor/tsconfig.json
@@ -18,7 +18,7 @@
       "transform": "@applitools/api-extractor",
       "afterDeclarations": true,
       "rootFile": "./index.ts",
-      "allowModules": ["protractor", "selenium-webdriver"],
+      "allowModules": ["protractor"],
       "stripPrivate": true,
       "stripProtected": true,
       "stripInternal": true
