--- a/packages/api-extractor/package.json
+++ b/packages/api-extractor/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "lint": "eslint '**/*.ts'",
     "build": "tsc",
+    "test": "mocha ./test/**/*.spec.ts --no-timeouts -r ts-node/register",
     "preversion": "bongo preversion",
     "version": "bongo version",
     "postversion": "bongo postversion",
@@ -42,6 +43,7 @@
   "dependencies": {},
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.13.0",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.9.0",
@@ -50,7 +52,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.7",
-    "mocha": "^8.0.1",
+    "mocha": "^9.1.3",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.1-rc"
