--- a/packages/api-extractor/package.json
+++ b/packages/api-extractor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/api-extractor",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Ultimate api extractor for typescript project",
   "keywords": [
     "applitools",
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.13.4",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.9.0",
@@ -55,7 +56,7 @@
     "mocha": "^9.1.3",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.1-rc"
+    "typescript": "^4.5.2"
   },
   "peerDependencies": {
     "typescript": ">=4.4.0"
