--- a/packages/eyes-playwright-universal/package.json
+++ b/packages/eyes-playwright-universal/package.json
@@ -29,37 +29,35 @@
   ],
   "scripts": {
     "lint": "eslint '**/*.ts' '**/*.js'",
-    "build": "yarn build:dist && yarn build:types",
-    "build:dist": "tsc",
-    "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules playwright",
+    "build": "ttsc",
     "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright-universal'",
-    "test": "yarn build:dist && yarn test:it && yarn test:e2e && yarn test:coverage",
-    "test:it": "mocha --no-timeouts ./test/it/*.spec.js",
+    "test": "yarn test:e2e && yarn test:coverage",
     "test:e2e": "mocha --no-timeouts --delay ./test/e2e/*.spec.js",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright-universal'",
-    "deps": "echo 'bongo deps'",
-    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='playwright-universal' -f links='eyes-sdk-core eyes-api types test-utils utils driver screenshoter sdk-shared visual-grid-client' -f linking-depth=2",
+    "deps": "bongo deps",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='playwright-universal' -f links='types test-utils sdk-shared eyes-universal eyes-sdk-core visual-grid-client eyes-api spec-driver-playwright utils driver snippets screenshoter' -f linking-depth=2",
     "gh:publish": "gh workflow run publish.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='playwright-universal'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
     "postversion": "bongo postversion"
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.0.11",
-    "@applitools/eyes-universal": "0.1.0",
-    "@applitools/types": "1.0.6",
-    "@applitools/utils": "1.2.0",
+    "@applitools/eyes-api": "1.1.6",
+    "@applitools/eyes-universal": "0.1.5",
+    "@applitools/spec-driver-playwright": "1.3.0",
+    "@applitools/types": "1.0.20",
+    "@applitools/utils": "1.2.4",
     "chalk": "4.1.0",
     "ws": "7.4.0"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.1.1",
-    "@applitools/scripts": "1.0.0",
-    "@applitools/sdk-coverage-tests": "2.3.13",
-    "@applitools/sdk-release-kit": "0.13.0",
-    "@applitools/sdk-shared": "0.9.3",
-    "@applitools/test-utils": "1.0.3",
+    "@applitools/api-extractor": "1.2.3",
+    "@applitools/scripts": "1.0.1",
+    "@applitools/sdk-coverage-tests": "2.3.16",
+    "@applitools/sdk-release-kit": "0.13.4",
+    "@applitools/sdk-shared": "0.9.9",
+    "@applitools/test-utils": "1.0.9",
     "@types/ws": "^7.4.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -70,10 +68,11 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.7",
     "mocha": "^8.0.1",
-    "playwright": "1.8.0",
+    "playwright": "1.16.3",
     "prettier": "^2.1.2",
     "spec-xunit-file": "0.0.1-3",
-    "typescript": "^4.1.5"
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.5.2"
   },
   "peerDependencies": {
     "playwright": ">=1.0.0"
