--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -95,7 +95,7 @@
     "spec-xunit-file": "0.0.1-3",
     "ts-node": "^10.4.0",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.5.1-rc"
+    "typescript": "^4.5.2"
   },
   "peerDependencies": {
     "protractor": ">=5.4.4"
