--- a/packages/eyes-storybook/.eslintignore
+++ b/packages/eyes-storybook/.eslintignore
@@ -8,6 +8,7 @@ test/fixtures/jsLayoutStorybookLocal
 test/fixtures/waitBeforeCapture
 test/fixtures/customFont
 test/fixtures/fakeIE
+test/fixtures/globalQueryParams
 test/fixtures/zeroStoriesRetry
 dist
 logs
