--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -52,7 +52,9 @@
     },
     "./v5/sync": {
       "types": "./types/v5-sync.d.ts"
-    }
+    },
+    "./dist/*": "./dist/*.js",
+    "./package.json": "./package.json"
   },
   "typesVersions": {
     "*": {
