--- a/.github/workflows/smart-publish.yml
+++ b/.github/workflows/smart-publish.yml
@@ -1,98 +1,41 @@
-name: Temp R
+name: Smart publish packages
 
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
-      schema:
+      packages:
+        description: package names (aliases)
         required: true
+      version:
+        description: version type
+        type: choice
+        options: [patch, minor, major]
+        default: patch
+        required: false
+      allow-cascading:
+        description: allow cascading
+        type: boolean
+        default: false
+        required: false
 jobs:
-  types:
-    if: ${{fromJSON(inputs.schema).types}}
+  setup:
+    name: Setup
     runs-on: ubuntu-latest
+    outputs:
+      packages: ${{steps.setup.outputs.packages}}
     steps:
-      - name: Do the thing
-        run: echo 'types'
-  utils:
-    if: ${{fromJSON(inputs.schema).utils}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'utils'
-  snippets:
-    if: ${{fromJSON(inputs.schema).snippets}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'snippets'
-  test-utils:
-    if: ${{fromJSON(inputs.schema).test-utils}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'test-utils'
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/parser
+        id: setup
+        with:
+          packages: ${{github.event.inputs.packages}}
+          allow-cascading: ${{github.event.inputs.allow-cascading}}
+          release-version: ${{github.event.inputs.version}}
 
-  logger:
-    needs: [utils]
-    if: ${{fromJSON(inputs.schema).logger && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'logger'
-  screenshoter:
-    needs: ${{fromJSON(inputs.schema).screenshoter.needs}}
-    if: ${{fromJSON(inputs.schema).screenshoter && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'screenshoter'
-  driver:
-    needs: [types, utils, snippets]
-    if: ${{fromJSON(inputs.schema).driver && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'driver'
-  test-server:
-    needs: [utils]
-    if: ${{fromJSON(inputs.schema).test-server && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'test-server'
-  scripts:
-    needs: [test-utils]
-    if: ${{fromJSON(inputs.schema).scripts && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'scripts'
-
-  # CORE
-  api:
-    needs: [types, utils, logger]
-    if: ${{fromJSON(inputs.schema).api && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'api'
-  core:
-    needs: [types, utils, test-utils, logger, driver, screenshoter, snippets]
-    if: ${{fromJSON(inputs.schema).core && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'core'
-  universal:
-    needs: [types, utils, logger, core, vgc]
-    if: ${{fromJSON(inputs.schema).universal && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'universal'
-  vgc:
-    needs: [core]
-    if: ${{fromJSON(inputs.schema).vgc && !failure() && !cancelled()}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Do the thing
-        run: echo 'vgc'
+  publish:
+    needs: [setup]
+    name: Temp
+    uses: applitools/eyes.sdk.javascript1/.github/workflows/temp_r.yml@cascade-publishing-gh-action
+    with:
+      schema: ${{needs.setup.outputs.packages}}
+    secrets: ${{secrets}
